# LanguageAuthomatsAndCalculation

./: ALists.cpp  ALists.h  Authomat.cpp  Authomat.h  Commands.cpp  Commands.h  Non-DeterministicFiniteAutomaton.cpp  Non-DeterministicFiniteAutomaton.sln  Non-DeterministicFiniteAutomaton.vcxproj  Non-DeterministicFiniteAutomaton.vcxproj.filters  Operations.cpp  Operations.h  README.md  RegexUtils.cpp  RegexUtils.h  StringHelper.cpp  StringHelper.h  Turing.cpp
ContextFreeGrammar/: CFG.cpp  CFG.h  CMakeLists.txt  Grammar.cpp  Grammar.h  GrammarCheckEmpty.cpp  GrammarChomsky.cpp  GrammarChomskyHelperFunctions.cpp  GrammarCombineRules.cpp  GrammarHelperFunctions.cpp  GrammarHelperFunctions.h  GrammarIsWordInLang.cpp  GrammarPrint.cpp  GrammarRuleOperations.cpp  README.md  Rule.cpp  Rule.h  main.cpp
DeterminedFiniteAuthomat/: DeterministicFiniteAutomaton.cpp  DeterministicFiniteAutomaton.sln  DeterministicFiniteAutomaton.vcxproj  DeterministicFiniteAutomaton.vcxproj.filters  KDA.cpp  KDA.h  README.md
